* coding.c (detect_coding_charset): Fix typo: * 2 -> *4 (Bug#8601).